[gd_scene load_steps=11 format=2]

[ext_resource path="res://Sprites/Bosses/tyson_rock_part.png" type="Texture" id=1]
[ext_resource path="res://Sprites/Bosses/tyson_rocks.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Killers/TysonRock.gd" type="Script" id=3]
[ext_resource path="res://Scenes/FX/SmokeParticles.tscn" type="PackedScene" id=4]
[ext_resource path="res://Sounds/Boss/rock_smash.wav" type="AudioStream" id=5]

[sub_resource type="CircleShape2D" id=5]

[sub_resource type="ParticlesMaterial" id=9]
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 239.05
initial_velocity_random = 0.88
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 374.2
angle_random = 1.0
anim_speed = 1.0

[sub_resource type="Gradient" id=6]
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0 )

[sub_resource type="GradientTexture" id=7]
gradient = SubResource( 6 )
width = 100

[sub_resource type="ParticlesMaterial" id=8]
flag_disable_z = true
direction = Vector3( 0, -1, 0 )
spread = 50.08
gravity = Vector3( 0, 300, 0 )
initial_velocity = 252.85
initial_velocity_random = 0.88
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 374.2
angle_random = 1.0
color_ramp = SubResource( 7 )

[node name="TysonRock" type="Node2D"]

[node name="Hitbox" type="KinematicBody2D" parent="."]
collision_layer = 8
collision_mask = 4
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="Hitbox"]
texture = ExtResource( 2 )
hframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource( 5 )
disabled = true

[node name="SmokeParticles" parent="Hitbox" instance=ExtResource( 4 )]
amount = 8
process_material = SubResource( 9 )

[node name="RockParticles" parent="Hitbox" instance=ExtResource( 4 )]
material = null
amount = 5
lifetime = 0.8
randomness = 1.0
process_material = SubResource( 8 )
texture = ExtResource( 1 )

[node name="Smash" type="AudioStreamPlayer" parent="Hitbox"]
stream = ExtResource( 5 )
volume_db = -7.576

[node name="EnableCollisions" type="Timer" parent="Hitbox"]
process_mode = 0
wait_time = 0.5
one_shot = true
autostart = true

[connection signal="finished" from="Hitbox/Smash" to="Hitbox" method="_on_AudioStreamPlayer_finished"]
[connection signal="timeout" from="Hitbox/EnableCollisions" to="Hitbox" method="_on_EnableCollisions_timeout"]
